--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <div class="cs-div">
-            <div class="name">Civil Status</div>
+            <div class="name">Civil Status:</div>
             <div class="input-div">
                 <input type="radio" name="cs" value="single">Single
                 <input type="radio" name="cs" value="married">Married
@@ -49,12 +49,40 @@
         </div>
 
         <div class="nationality-div">
-            <div class="name">Nationality</div>
+            <div class="name">Nationality:</div>
             <div class="input-div">
                 <input type="text" name="nationality" placeholder="Your Answer">
             </div>
         </div>
 
+        <div class="pob-div">
+            <div class="name">Place of Birth:</div>
+            <div class="input-div">
+                <input type="text" name="pob" placeholder="Your Answer">
+                <input type="checkbox" id="sameAddress">The same with Home Address
+            </div>
+        </div>
+
+        <div class="address-div">
+            <div class="name">Home Address:</div>
+            <div class="input-div">
+                <input type="text" name="address" placeholder="Your Answer">
+            </div>
+        </div>
+
+        <div class="number-div">
+            <div class="name">Mobile/Cellphone Number:</div>
+            <div class="input-div">
+                <input type="text" name="number" placeholder="Your Answer">
+            </div>
+        </div>
+
+        <div class="email-div">
+            <div class="name">Email Address:</div>
+            <div class="input-div">
+                <input type="email" name="email" placeholder="Your Answer">
+            </div>
+        </div>
 
 
 
