--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 </div>
                 <div class="sub-name">Monthly Earnings</div>
                 <div class="input-div">
-                    <input type="text" name="monthly" placeholder="Your Answer">
+                    <input type="text" name="monthly" placeholder="P">
                 </div>
         </div>
 
@@ -299,10 +299,10 @@
                 </div>
                 <div class="sub-name">Monthly Earnings</div>
                 <div class="input-div">
-                    <input type="text" name="monthly" placeholder="Your Answer">
+                    <input type="text" name="monthly" placeholder="P">
                 </div>
                 <div class="sub-name">Are you applying for membership in the Flexi-Fund Program?</div>
-                <div class="input-div">
+                <div class="memberinput-div">
                     <input type="radio" name="membership" value="yes">Yes
                     <input type="radio" name="membership" value="no">No
                 </div>
@@ -320,9 +320,8 @@
                 </div>
                 <div class="sub-name">I agree with my spouse membership with SSS.</div>
                 <div class="input-div">
-                    <input type="text" name="agree" placeholder="Your Answer">
+                    <input type="text" name="agree" placeholder="Signature over printed name">
                 </div>
-                <div class="sub-name">Signature over printed name of working spouse.</div>
         </div>
 
     </div>
@@ -337,21 +336,18 @@
                 <div class="sign-div">
                     <div class="subsign-div">
                         <div class="input-div">
-                            <input type="text" name="printed" placeholder="Your Answer">
+                            <input type="text" name="printed" placeholder="Printed Name">
                         </div>
-                        <div class="sub-name">Printed Name</div>
                     </div>
                     <div class="subsign-div">
                         <div class="input-div">
-                            <input type="text" name="signature" placeholder="Your Answer">
+                            <input type="text" name="signature" placeholder="Signature">
                         </div>
-                        <div class="sub-name">Signature</div>
                     </div>
                     <div class="subsign-div">
                         <div class="input-div">
-                            <input type="date" name="date" placeholder="Your Answer" required>
+                            <input type="date" name="date" placeholder="Date">
                         </div>
-                        <div class="sub-name">Date</div>
                     </div>
                 </div>
         </div>
@@ -372,30 +368,30 @@
 
         <div class="left-con">
             <div class="subleft-con">
-                <div class="name">Business Code <br> (For SE)</div>
+                <div class="name">Business Code (For SE)</div>
                 <div class="input-div">
                     <input type="text" name="bc" placeholder="Your Answer">
                 </div>
-                <div class="name">Monthly SS Contribution <br> (For SE/OFW/NWS)</div>
+                <div class="name">Monthly Contribution (SE/OFW/NWS)</div>
                 <div class="input-div">
                     <input type="text" name="monthly" placeholder="Your Answer">
                 </div>
-                <div class="name">Start of Payment <br> (For SE/NWS)</div>
+                <div class="name">Start of Payment (For SE/NWS)</div>
                 <div class="input-div">
                     <input type="text" name="payment" placeholder="Your Answer">
                 </div>
             </div>
             <div class="subright-con">
-                <div class="name">Working Spouse's MSC <br> (For NWS)</div>
+                <div class="name">Working Spouse's MSC (For NWS)</div>
                 <div class="input-div">
                     <input type="text" name="working" placeholder="Your Answer">
                 </div>
-                <div class="name">Approved MSC <br> (For SE/OFW/NWS)</div>
+                <div class="name">Approved MSC (For SE/OFW/NWS)</div>
                 <div class="input-div">
                     <input type="text" name="approved" placeholder="Your Answer">
                 </div>
-                <div class="name">Flexi-Fund Application <br> (For OFW)</div>
-                <div class="input-div">
+                <div class="name">Flexi-Fund Application (For OFW)</div>
+                <div class="approvedinput-div">
                     <input type="radio" name="flexi" value="approved">Approved
                     <input type="radio" name="flexi" value="disapproved">Disapproved
                 </div>
@@ -410,32 +406,28 @@
                     <div class="sign-div">
                         <div class="subsign-div">
                             <div class="input-div">
-                                <input type="text" class="received" placeholder="Your Answer">
+                                <input type="text" class="received" placeholder="Signature">
                             </div>
-                            <div class="sub-name">Signature</div>
                         </div>
                         <div class="subsign-div">
                             <div class="input-div">
-                                <input type="text" class="date" placeholder="Your Answer">
+                                <input type="text" class="date" placeholder="Date & Time">
                             </div>
-                            <div class="sub-name">Date & Time</div>
                         </div>
                     </div>
                 </div>
                 <div class="subright-con">
-                    <div class="name">Received & Processed By <br> (MSS, Branch/Service Office/Foreign Office)</div>
+                    <div class="name">Received & Processed By <br> (MSS, Branch/Service Office)</div>
                     <div class="sign-div">
                         <div class="subsign-div">
                             <div class="input-div">
-                                <input type="text" name="signature" placeholder="Your Answer">
+                                <input type="text" name="signature" placeholder="Signature">
                             </div>
-                            <div class="sub-name">Signature</div>
                         </div>
                         <div class="subsign-div">
                             <div class="input-div">
-                                <input type="text" name="date" placeholder="Your Answer">
+                                <input type="text" name="date" placeholder="Date & Time">
                             </div>
-                            <div class="sub-name">Date & Time</div>
                         </div>
                     </div>
                 </div>
@@ -445,15 +437,13 @@
                 <div class="sign-div">
                     <div class="subsign-div">
                         <div class="input-div">
-                            <input type="text" name="signature" placeholder="Your Answer">
+                            <input type="text" name="signature" placeholder="Signature">
                         </div>
-                        <div class="sub-name">Signature</div>
                     </div>
                     <div class="subsign-div">
                         <div class="input-div">
-                            <input type="text" name="date" placeholder="Your Answer">
+                            <input type="text" name="date" placeholder="Date & Time">
                         </div>
-                        <div class="sub-name">Date & Time</div>
                     </div>
                 </div>
             </div>
