--- a/index.html
+++ b/index.html
@@ -283,11 +283,11 @@
                 </div>
                 <div class="sub-name">Year Prof./Business Started</div>
                 <div class="input-div">
-                    <input type="text" name="year_star" placeholder="Your Answer">
+                    <input type="date" name="year_start" placeholder="Your Answer">
                 </div>
                 <div class="sub-name">Monthly Earnings</div>
                 <div class="input-div">
-                    <input type="text" name="monthly_se" placeholder="P">
+                    <input type="text" name="self_earn" placeholder="P">
                 </div>
         </div>
 
@@ -295,11 +295,11 @@
             <div class="name">Overseas Filipino Worker (OFW)</div>
                 <div class="sub-name">Foreign Address</div>
                 <div class="input-div">
-                    <input type="text" name="foradd" placeholder="Your Answer">
+                    <input type="text" name="for_add" placeholder="Your Answer">
                 </div>
                 <div class="sub-name">Monthly Earnings</div>
                 <div class="input-div">
-                    <input type="text" name="monthly_ofw" placeholder="P">
+                    <input type="text" name="ofw_earnings" placeholder="$">
                 </div>
                 <div class="sub-name">Are you applying for membership in the Flexi-Fund Program?</div>
                 <div class="memberinput-div">
@@ -316,11 +316,11 @@
                 </div>
                 <div class="sub-name">Monthly Income of Working Spouse</div>
                 <div class="input-div">
-                    <input type="text" name="monthly_nws" placeholder="Your Answer">
+                    <input type="text" name="spouse_income" placeholder="P">
                 </div>
                 <div class="sub-name">I agree with my spouse membership with SSS.</div>
                 <div class="input-div">
-                    <input type="text" name="agree" placeholder="Signature over printed name">
+                    <input type="text" name="agreement" placeholder="Signature over printed name">
                 </div>
         </div>
 
